# MultiModal-Backend

./: .flake8  .gitignore  .pre-commit-config.yaml  Flash-attn-env-reqr.txt  README.md  logging_config.yaml  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
MultiModal/: __init__.py  __main__.py  conftest.py  settings.py
MultiModal/db/: base.py  utils.py
MultiModal/db/models/: __init__.py
MultiModal/services/: __init__.py
MultiModal/services/redis/: lifetime.py
MultiModal/static/: WhisperModel.py  WhisperModel1.py  faster_whisper1.py  phi3_visionchat.py  translation_demo.py  vectordb.py  video_inf.py
MultiModal/tests/: __init__.py
MultiModal/web/: __init__.py  application.py  lifetime.py
MultiModal/web/api/: __init__.py  auth.py  router.py
MultiModal/web/api/chatbot/: __init__.py  views.py
MultiModal/web/api/monitoring/: __init__.py
chroma/: chroma.sqlite3
deploy/: Dockerfile  docker-compose.dev.yml  docker-compose.yml
documentation/: Details_Objectives.docx  Multimodal LLM.docx
media/transcription/: transcription.json
notebooks/: Phi-3-Vision-128K-instruct.ipynb  audio.ipynb  del_whisper.ipynb  phi3_vision.ipynb  test.py  whisper_val.ipynb
